[gd_scene load_steps=5 format=3 uid="uid://b2kxvwgqjkm9nh"]

[ext_resource type="Script" path="res://scripts/TradingHub3D.gd" id="1_trading_hub_3d"]
[ext_resource type="Texture2D" uid="uid://dquhxy01gxi51" path="res://documentation/design/trading_hub/trading_hub.png" id="2_trading_hub_texture"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(12, 8, 12)

[sub_resource type="SphereShape3D" id="SphereShape3D_1"]
radius = 15.0

[node name="TradingHub3D" type="StaticBody3D"]
collision_layer = 8
collision_mask = 1
script = ExtResource("1_trading_hub_3d")

[node name="HubSprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
billboard = 1
pixel_size = 0.01
texture = ExtResource("2_trading_hub_texture")

[node name="HubCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
shape = SubResource("BoxShape3D_1")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="InteractionCollision" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
shape = SubResource("SphereShape3D_1")

[node name="HubLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)
billboard = 1
text = "TRADING HUB"
font_size = 24
